--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <title>Bayya - Bitcoin Crypto Currency Template</title>
@@ -105,12 +105,12 @@
               <div class="container">
                 <div class="slider-text text-center">
                   <h3 class="slide-title">
-                    <span>Secure</span> and <span>Easy Way</span><br />
-                    To Bitcoin
+                    Créez votre compte <span>crypto </span></br> avec
+                    <span>bonus parrainage</span><br />
                   </h3>
                   <p>
-                    <a href="about.html" class="slider btn btn-primary"
-                      >Learn more</a
+                    <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ" class="slider btn btn-primary"
+                      >Démarrer</a
                     >
                   </p>
                 </div>
@@ -125,12 +125,11 @@
                 <div class="container">
                   <div class="slider-text text-center">
                     <h3 class="slide-title">
-                      <span>Bitcoin</span> Exchange <br />You can
-                      <span>Trust</span>
+                      Rejoignez la plus grande <span>plateforme crypto</span> au monde
                     </h3>
                     <p>
-                      <a href="pricing.html" class="slider btn btn-primary"
-                        >our prices</a
+                      <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ" class="slider btn btn-primary"
+                        >Démarrer</a
                       >
                     </p>
                   </div>
@@ -172,9 +171,9 @@
                 />
               </span>
               <div class="feature-box-content">
-                <h3>Download Bitcoin Wallet</h3>
+                <h3>Créez votre Crypto Wallet</h3>
                 <p>
-                  Get it on PC or Mobile to create, send and receive bitcoins.
+                  Rejoignez la plus grande plateforme cryptos au monde
                 </p>
               </div>
             </div>
@@ -188,8 +187,8 @@
                 />
               </span>
               <div class="feature-box-content">
-                <h3>Add coins to your Wallet</h3>
-                <p>Add bitcoins you’ve created or exchanged via credit card.</p>
+                <h3>Achetez des Crypto</h3>
+                <p>Avec votre carte bancaire, procurez-vous des Bitcoins, Ethereum, etc.</p>
               </div>
             </div>
             <!-- Feature Box Ends -->
@@ -197,13 +196,13 @@
             <div class="feature-box three col-md-4 col-sm-12">
               <span class="feature-icon">
                 <img
-                  src="images/icons/orange/buy-sell-bitcoins.png"
+                  src="images/icons/orange/cost-efficiency.png"
                   alt="buy and sell bitcoins"
                 />
               </span>
               <div class="feature-box-content">
-                <h3>Buy/Sell with Wallet</h3>
-                <p>Enter receiver's address, specify the amount and send.</p>
+                <h3>Profitez du Bonus Parrainage</h3>
+                <p>Economisez 10% sur les frais de transaction <u>pour toujours</u></p>
               </div>
             </div>
             <!-- Feature Box Ends -->
@@ -216,11 +215,10 @@
         <div class="container">
           <!-- Section Title Starts -->
           <div class="row text-center">
-            <h2 class="title-head">About <span>Us</span></h2>
+            <h2 class="title-head">Le <span>Parrainage</span></h2>
             <div class="title-head-subtitle">
               <p>
-                a commercial website that lists wallets, exchanges and other
-                bitcoin related info
+                Gagnez 10 % de commission sur chaque trade effectué sur Binance Spot, Futures et Pool. Pour toujours.</br>CODE : <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ">GXXE5CMQ</a>
               </p>
             </div>
           </div>
@@ -238,46 +236,14 @@
             <!-- Image Ends -->
             <!-- Content Starts -->
             <div class="col-sm-12 col-md-7 col-lg-6">
-              <h3 class="title-about">WE ARE BAYYA</h3>
+              <h3 class="title-about">Comment ça marche ?</h3>
               <p class="about-text">
-                A place for everyone who wants to simply buy and sell Bitcoins.
-                Deposit funds using your Visa/MasterCard or bank transfer.
-                Instant buy/sell of Bitcoins at fair price is guaranteed.
-                Nothing extra. Join over 700,000 users from all over the world
-                satisfied with our services.
+                Les inscriptions sur la plateforme Binance, faites à partir du <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ">lien de parrainage</a>
+                 ou utilisant le code de parrainage <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ">GXXE5CMQ</a>
+                bénéficieront du bonus de parrainage qui conciste à une réduction sur les frais de transactions de l'ordre de 10%.
               </p>
-              <ul class="nav nav-tabs">
-                <li class="active">
-                  <a data-toggle="tab" href="#menu1">Our Mission</a>
-                </li>
-                <li><a data-toggle="tab" href="#menu2">Our advantages</a></li>
-                <li><a data-toggle="tab" href="#menu3">Our guarantees</a></li>
-              </ul>
-              <div class="tab-content">
-                <div id="menu1" class="tab-pane fade in active">
-                  <p>
-                    Bitcoin is based on a protocol known as the blockchain,
-                    which allows to create, transfer and verify ultra-secure
-                    financial data without interference of third parties.
-                  </p>
-                </div>
-                <div id="menu2" class="tab-pane fade">
-                  <p>
-                    Our mission as an official partner of Bitcoin Foundation is
-                    to help you enter and better understand the world of #1
-                    cryptocurrency and avoid any issues you may encounter.
-                  </p>
-                </div>
-                <div id="menu3" class="tab-pane fade">
-                  <p>
-                    We are here because we are passionate about open,
-                    transparent markets and aim to be a major driving force in
-                    widespread adoption, we are the first and the best in
-                    cryptocurrency.
-                  </p>
-                </div>
-              </div>
-              <a class="btn btn-primary" href="about.html">Read More</a>
+            </br>
+              <a class="btn btn-primary" href="https://www.binance.com/fr/support/faq/cbac15853b0243cda4a90c9c03ca0c38">En savoir plus</a>
             </div>
             <!-- Content Ends -->
           </div>
@@ -293,16 +259,16 @@
               <div class="col-xs-12">
                 <!-- Call To Action Text Starts -->
                 <div class="action-text">
-                  <h2>Get Started Today With Bitcoin</h2>
+                  <h2>Créez votre compte parrainé aujourd'hui</h2>
                   <p class="lead">
-                    Open account for free and start trading Bitcoins!
+                    Profitez des 10% de réduction sur les frais de transaction.
                   </p>
                 </div>
                 <!-- Call To Action Text Ends -->
                 <!-- Call To Action Button Starts -->
                 <p class="action-btn">
                   <a class="btn btn-primary" href="register.html"
-                    >Register Now</a
+                    >Démarrer</a
                   >
                 </p>
                 <!-- Call To Action Button Ends -->
@@ -314,91 +280,6 @@
       <!-- Call To Action Section Ends -->
       <!-- Footer Starts -->
       <footer class="footer">
-        <!-- Footer Top Area Starts -->
-        <div class="top-footer">
-          <div class="container">
-            <div class="row">
-              <!-- Footer Widget Starts -->
-              <div class="col-sm-4 col-md-2">
-                <h4>Our Company</h4>
-                <div class="menu">
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="services.html">Services</a></li>
-                    <li><a href="pricing.html">Pricing</a></li>
-                    <li><a href="blog-right-sidebar.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                  </ul>
-                </div>
-              </div>
-              <!-- Footer Widget Ends -->
-              <!-- Footer Widget Starts -->
-              <div class="col-sm-4 col-md-2">
-                <h4>Help & Support</h4>
-                <div class="menu">
-                  <ul>
-                    <li><a href="faq.html">FAQ</a></li>
-                    <li>
-                      <a href="terms-of-services.html">Terms of Services</a>
-                    </li>
-                    <li><a href="404.html">404</a></li>
-                    <li><a href="register.html">Register</a></li>
-                    <li><a href="login.html">Login</a></li>
-                    <li><a href="coming-soon.html">Coming Soon</a></li>
-                  </ul>
-                </div>
-              </div>
-              <!-- Footer Widget Ends -->
-              <!-- Footer Widget Starts -->
-              <div class="col-sm-4 col-md-3">
-                <h4>Contact Us</h4>
-                <div class="contacts">
-                  <div>
-                    <span>contact@website.com</span>
-                  </div>
-                  <div>
-                    <span>00216 21 184 010</span>
-                  </div>
-                  <div>
-                    <span>London, England</span>
-                  </div>
-                  <div>
-                    <span>mon-sat 08am &#x21FE; 05pm</span>
-                  </div>
-                </div>
-                <!-- Social Media Profiles Starts -->
-                <div class="social-footer">
-                  <ul>
-                    <li>
-                      <a href="#" target="_blank"
-                        ><i class="fa fa-facebook"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="#" target="_blank"
-                        ><i class="fa fa-twitter"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="#" target="_blank"
-                        ><i class="fa fa-google-plus"></i
-                      ></a>
-                    </li>
-                    <li>
-                      <a href="#" target="_blank"
-                        ><i class="fa fa-linkedin"></i
-                      ></a>
-                    </li>
-                  </ul>
-                </div>
-                <!-- Social Media Profiles Ends -->
-              </div>
-              <!-- Footer Widget Ends -->
-            </div>
-          </div>
-        </div>
-        <!-- Footer Top Area Ends -->
         <!-- Footer Bottom Area Starts -->
         <div class="bottom-footer">
           <div class="container">
@@ -406,8 +287,7 @@
               <div class="col-xs-12">
                 <!-- Copyright Text Starts -->
                 <p class="text-center">
-                  Copyright © 2018 Bayya All Rights Reserved | Created with Love
-                  by
+                  Ce site n’est pas affilié à Binance | Theme par
                   <a href="https://themeforest.net/user/celtano" target="_blank"
                     >celtano</a
                   >
