--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8" />
-    <title>Bayya - Bitcoin Crypto Currency Template</title>
+    <title>Binance Parrainage - Code GXXE5CMQ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon.png" />
+    <link rel="shortcut icon" href="images/favicon.ico" />
 
     <!-- Template CSS Files -->
     <link rel="stylesheet" href="css/font-awesome.min.css" />
