--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <title>Binance Parrainage - Code GXXE5CMQ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+  name="description"
+  content="Inscrivez-vous gratuitement sur Binance en profitant du Bonus de Parrainage.
+  Binance est la plus grande plateforme au monde de trading de cryptomonnaies.
+  Economisez 10% sur les frais de transaction pour toujours grâce au parrainage.">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.ico" />
@@ -71,11 +76,11 @@
           <div class="row">
             <!-- Logo Starts -->
             <div class="main-logo col-xs-12 col-md-3 col-md-2 col-lg-2">
-              <a href="index.html">
+              <a href="index.html" rel="noopener">
                 <img
                   class="img-responsive"
                   src="images/binance.svg"
-                  alt="logo"
+                  alt="logo binance parrainage"
                 />
               </a>
             </div>
@@ -109,7 +114,7 @@
                     <span>bonus parrainage</span><br />
                   </h3>
                   <p>
-                    <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ" class="slider btn btn-primary"
+                    <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ" class="slider btn btn-primary" rel="noopener"
                       >Démarrer</a
                     >
                   </p>
@@ -167,7 +172,7 @@
               <span class="feature-icon">
                 <img
                   src="images/icons/orange/download-bitcoin.png"
-                  alt="download bitcoin"
+                  alt="creer crypto wallet"
                 />
               </span>
               <div class="feature-box-content">
@@ -183,7 +188,7 @@
               <span class="feature-icon">
                 <img
                   src="images/icons/orange/add-bitcoins.png"
-                  alt="add bitcoins"
+                  alt="acheter des crypto"
                 />
               </span>
               <div class="feature-box-content">
@@ -197,7 +202,7 @@
               <span class="feature-icon">
                 <img
                   src="images/icons/orange/cost-efficiency.png"
-                  alt="buy and sell bitcoins"
+                  alt="profitez du bonus parrainage"
                 />
               </span>
               <div class="feature-box-content">
@@ -218,7 +223,7 @@
             <h2 class="title-head">Le <span>Parrainage</span></h2>
             <div class="title-head-subtitle">
               <p>
-                Gagnez 10 % de commission sur chaque trade effectué sur Binance Spot, Futures et Pool. Pour toujours.</br>CODE : <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ">GXXE5CMQ</a>
+                Gagnez 10 % de commission sur chaque trade effectué sur Binance Spot, Futures et Pool. Pour toujours.</br>CODE : <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ" rel="noopener">GXXE5CMQ</a>
               </p>
             </div>
           </div>
@@ -230,7 +235,7 @@
               <img
                 class="img-responsive img-about-us"
                 src="images/about-us.png"
-                alt="about us"
+                alt="le parrainage"
               />
             </div>
             <!-- Image Ends -->
@@ -238,12 +243,12 @@
             <div class="col-sm-12 col-md-7 col-lg-6">
               <h3 class="title-about">Comment ça marche ?</h3>
               <p class="about-text">
-                Les inscriptions sur la plateforme Binance, faites à partir du <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ">lien de parrainage</a>
-                 ou utilisant le code de parrainage <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ">GXXE5CMQ</a>
+                Les inscriptions sur la plateforme Binance, faites à partir du <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ" rel="noopener">lien de parrainage</a>
+                 ou utilisant le code de parrainage <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ" rel="noopener">GXXE5CMQ</a>
                 bénéficieront du bonus de parrainage qui conciste à une réduction sur les frais de transactions de l'ordre de 10%.
               </p>
             </br>
-              <a class="btn btn-primary" href="https://www.binance.com/fr/support/faq/cbac15853b0243cda4a90c9c03ca0c38">En savoir plus</a>
+              <a class="btn btn-primary" href="https://www.binance.com/fr/support/faq/cbac15853b0243cda4a90c9c03ca0c38" rel="noopener">En savoir plus</a>
             </div>
             <!-- Content Ends -->
           </div>
@@ -288,7 +293,7 @@
                 <!-- Copyright Text Starts -->
                 <p class="text-center">
                   Ce site n’est pas affilié à Binance | Theme par
-                  <a href="https://themeforest.net/user/celtano" target="_blank"
+                  <a href="https://themeforest.net/user/celtano" target="_blank" rel="noopener"
                     >celtano</a
                   >
                 </p>
