--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   name="description"
   content="Inscrivez-vous gratuitement sur Binance en profitant du Bonus de Parrainage.
   Binance est la plus grande plateforme au monde de trading de cryptomonnaies.
-  Economisez 10% sur les frais de transaction pour toujours grâce au parrainage.">
+  Économisez 10% sur les frais de transaction pour toujours grâce au parrainage.">
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.ico" />
@@ -207,7 +207,7 @@
               </span>
               <div class="feature-box-content">
                 <h3>Profitez du Bonus Parrainage</h3>
-                <p>Economisez 10% sur les frais de transaction <u>pour toujours</u></p>
+                <p>Économisez 10% sur les frais de transaction <u>pour toujours</u></p>
               </div>
             </div>
             <!-- Feature Box Ends -->
@@ -245,7 +245,7 @@
               <p class="about-text">
                 Les inscriptions sur la plateforme Binance, faites à partir du <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ" rel="noopener">lien de parrainage</a>
                  ou utilisant le code de parrainage <a href="https://accounts.binance.com/fr/register?ref=GXXE5CMQ" rel="noopener">GXXE5CMQ</a>
-                bénéficieront du bonus de parrainage qui conciste à une réduction sur les frais de transactions de l'ordre de 10%.
+                bénéficieront du bonus de parrainage qui consiste à une réduction sur les frais de transactions de l'ordre de 10%.
               </p>
             </br>
               <a class="btn btn-primary" href="https://www.binance.com/fr/support/faq/cbac15853b0243cda4a90c9c03ca0c38" rel="noopener">En savoir plus</a>
@@ -292,7 +292,7 @@
               <div class="col-xs-12">
                 <!-- Copyright Text Starts -->
                 <p class="text-center">
-                  Ce site n’est pas affilié à Binance | Theme par
+                  Ce site n’est pas affilié à Binance | Thème par
                   <a href="https://themeforest.net/user/celtano" target="_blank" rel="noopener"
                     >celtano</a
                   >
